output_dir/LAParserParser.py
# Generated from LAParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LAParserParser ( Parser ):

    grammarFileName = "LAParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'algoritmo'", "'fim_algoritmo'", "'declare'", 
                     "'constante'", "':'", "'='", "'tipo'", "'procedimento'", 
                     "'('", "')'", "'fim_procedimento'", "'fim'", "'fim_funcao'", 
                     "','", "'.'", "'['", "']'", "'literal'", "'inteiro'", 
                     "'real'", "'logico'", "'^'", "'verdadeiro'", "'falso'", 
                     "'registro'", "'fim_registro'", "'var'", "'leia'", 
                     "'escreva'", "'se'", "'entao'", "'senao'", "'fim_se'", 
                     "'caso'", "'seja'", "'fim_caso'", "'para'", "'<-'", 
                     "'ate'", "'faca'", "'fim_para'", "'enquanto'", "'fim_enquanto'", 
                     "'retorne'", "'..'", "'-'", "'+'", "'*'", "'/'", "'%'", 
                     "'&'", "'<>'", "'>='", "'<='", "'>'", "'<'", "'nao'", 
                     "'ou'", "'e'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NUM_INT", "NUM_REAL", "IDENT", "CADEIA", "WHITE_SPACE", 
                      "COMMENTS", "ErrorChar" ]

    RULE_program = 0
    RULE_declaracoes = 1
    RULE_decl_local_global = 2
    RULE_declaracao_local = 3
    RULE_declaracao_global = 4
    RULE_variavel = 5
    RULE_identificador = 6
    RULE_dimensao = 7
    RULE_tipo = 8
    RULE_tipo_basico = 9
    RULE_tipo_basico_ident = 10
    RULE_tipo_estendido = 11
    RULE_valor_constante = 12
    RULE_registro = 13
    RULE_parametros = 14
    RULE_parametro = 15
    RULE_corpo = 16
    RULE_cmd = 17
    RULE_cmdLeia = 18
    RULE_cmdEscreva = 19
    RULE_cmdSe = 20
    RULE_cmdCaso = 21
    RULE_cmdPara = 22
    RULE_cmdEnquanto = 23
    RULE_cmdFaca = 24
    RULE_cmdAtribuicao = 25
    RULE_cmdChamada = 26
    RULE_cmdRetorne = 27
    RULE_selecao = 28
    RULE_item_selecao = 29
    RULE_constantes = 30
    RULE_numero_intervalo = 31
    RULE_op_unario = 32
    RULE_exp_aritmetica = 33
    RULE_termo = 34
    RULE_fator = 35
    RULE_op1 = 36
    RULE_op2 = 37
    RULE_op3 = 38
    RULE_parcela = 39
    RULE_parcela_unario = 40
    RULE_parcela_nao_unario = 41
    RULE_exp_relacional = 42
    RULE_op_relacional = 43
    RULE_expressao = 44
    RULE_termo_logico = 45
    RULE_fator_logico = 46
    RULE_parcela_logica = 47
    RULE_op_logico_1 = 48
    RULE_op_logico_2 = 49

    ruleNames =  [ "program", "declaracoes", "decl_local_global", "declaracao_local", 
                   "declaracao_global", "variavel", "identificador", "dimensao", 
                   "tipo", "tipo_basico", "tipo_basico_ident", "tipo_estendido", 
                   "valor_constante", "registro", "parametros", "parametro", 
                   "corpo", "cmd", "cmdLeia", "cmdEscreva", "cmdSe", "cmdCaso", 
                   "cmdPara", "cmdEnquanto", "cmdFaca", "cmdAtribuicao", 
                   "cmdChamada", "cmdRetorne", "selecao", "item_selecao", 
                   "constantes", "numero_intervalo", "op_unario", "exp_aritmetica", 
                   "termo", "fator", "op1", "op2", "op3", "parcela", "parcela_unario", 
                   "parcela_nao_unario", "exp_relacional", "op_relacional", 
                   "expressao", "termo_logico", "fator_logico", "parcela_logica", 
                   "op_logico_1", "op_logico_2" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    NUM_INT=60
    NUM_REAL=61
    IDENT=62
    CADEIA=63
    WHITE_SPACE=64
    COMMENTS=65
    ErrorChar=66
    DECLARE=1
    REAL=2
    INTEIRO=3
    LITERAL=4
    LEIA=5
    ESCREVA=6
    SE=7
    ENTAO=8
    SENAO=9
    FIM_SE=10
    FIM_ALGORITMO=11
    FIM=12
    CONSTANTE=13
    TIPO=14
    LOGICO=15
    REGISTRO=16
    FIM_REGISTRO=17
    PROCEDIMENTO=18
    VAR=19
    FALSO=20
    ENQUANTO=21
    VERDADEIRO=22
    FACA=23
    ATE=24
    FIM_ENQUANTO=25
    FIM_PROCEDIMENTO=26
    CASO=27
    FIM_CASO=28
    SEJA=29
    PARA=30
    FIM_PARA=31
    FUNCAO=32
    FIM_FUNCAO=33
    RETORNE=34
    E=35
    OU=36
    NAO=37
    COMMENT=38
    OP_ARITMETICOS=39
    OP_RELACIONAIS=40
    OP_MEMORIA=41
    DELIMITADORES=42
    NREAL=44
    NINTEIRO=45
    IDENTIFICADOR=46
    WS=47
    INVALID_CHAR=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes(self):
            return self.getTypedRuleContext(LAParserParser.DeclaracoesContext,0)


        def corpo(self):
            return self.getTypedRuleContext(LAParserParser.CorpoContext,0)


        def getRuleIndex(self):
            return LAParserParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = LAParserParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.declaracoes()
            self.state = 101
            self.match(LAParserParser.T__0)
            self.state = 102
            self.corpo()
            self.state = 103
            self.match(LAParserParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_local_global(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParserParser.Decl_local_globalContext)
            else:
                return self.getTypedRuleContext(LAParserParser.Decl_local_globalContext,i)


        def getRuleIndex(self):
            return LAParserParser.RULE_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes" ):
                listener.enterDeclaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes" ):
                listener.exitDeclaracoes(self)




    def declaracoes(self):

        localctx = LAParserParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4504) != 0):
                self.state = 105
                self.decl_local_global()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_local_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_local(self):
            return self.getTypedRuleContext(LAParserParser.Declaracao_localContext,0)


        def declaracao_global(self):
            return self.getTypedRuleContext(LAParserParser.Declaracao_globalContext,0)


        def getRuleIndex(self):
            return LAParserParser.RULE_decl_local_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_local_global" ):
                listener.enterDecl_local_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_local_global" ):
                listener.exitDecl_local_global(self)




    def decl_local_global(self):

        localctx = LAParserParser.Decl_local_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl_local_global)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.declaracao_local()
                pass
            elif token in [8, 12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.declaracao_global()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_localContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variavel(self):
            return self.getTypedRuleContext(LAParserParser.VariavelContext,0)


        def IDENT(self):
            return self.getToken(LAParserParser.IDENT, 0)

        def tipo_basico(self):
            return self.getTypedRuleContext(LAParserParser.Tipo_basicoContext,0)


        def valor_constante(self):
            return self.getTypedRuleContext(LAParserParser.Valor_constanteContext,0)


        def tipo(self):
            return self.getTypedRuleContext(LAParserParser.TipoContext,0)


        def getRuleIndex(self):
            return LAParserParser.RULE_declaracao_local

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_local" ):
                listener.enterDeclaracao_local(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_local" ):
                listener.exitDeclaracao_local(self)




    def declaracao_local(self):

        localctx = LAParserParser.Declaracao_localContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao_local)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(LAParserParser.T__2)
                self.state = 116
                self.variavel()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(LAParserParser.T__3)
                self.state = 118
                self.match(LAParserParser.IDENT)
                self.state = 119
                self.match(LAParserParser.T__4)
                self.state = 120
                self.tipo_basico()
                self.state = 121
                self.match(LAParserParser.T__5)
                self.state = 122
                self.valor_constante()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(LAParserParser.T__6)
                self.state = 125
                self.match(LAParserParser.IDENT)
                self.state = 126
                self.match(LAParserParser.T__4)
                self.state = 127
                self.tipo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(LAParserParser.IDENT, 0)

        def parametros(self):
            return self.getTypedRuleContext(LAParserParser.ParametrosContext,0)


        def declaracao_local(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParserParser.Declaracao_localContext)
            else:
                return self.getTypedRuleContext(LAParserParser.Declaracao_localContext,i)


        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParserParser.CmdContext)
            else:
                return self.getTypedRuleContext(LAParserParser.CmdContext,i)


        def tipo_estendido(self):
            return self.getTypedRuleContext(LAParserParser.Tipo_estendidoContext,0)


        def getRuleIndex(self):
            return LAParserParser.RULE_declaracao_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_global" ):
                listener.enterDeclaracao_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_global" ):
                listener.exitDeclaracao_global(self)




    def declaracao_global(self):

        localctx = LAParserParser.Declaracao_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracao_global)
        self._la = 0 # Token type
        try:
            self.state = 173
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(LAParserParser.T__7)
                self.state = 131
                self.match(LAParserParser.IDENT)
                self.state = 132
                self.match(LAParserParser.T__8)
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==27 or _la==62:
                    self.state = 133
                    self.parametros()


                self.state = 136
                self.match(LAParserParser.T__9)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 152) != 0):
                    self.state = 137
                    self.declaracao_local()
                    self.state = 142
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4611709264673636352) != 0):
                    self.state = 143
                    self.cmd()
                    self.state = 148
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 149
                self.match(LAParserParser.T__10)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.match(LAParserParser.T__11)
                self.state = 151
                self.match(LAParserParser.IDENT)
                self.state = 152
                self.match(LAParserParser.T__8)
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==27 or _la==62:
                    self.state = 153
                    self.parametros()


                self.state = 156
                self.match(LAParserParser.T__9)
                self.state = 157
                self.match(LAParserParser.T__4)
                self.state = 158
                self.tipo_estendido()
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 152) != 0):
                    self.state = 159
                    self.declaracao_local()
                    self.state = 164
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4611709264673636352) != 0):
                    self.state = 165
                    self.cmd()
                    self.state = 170
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 171
                self.match(LAParserParser.T__12)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.primID = None # IdentificadorContext
            self._identificador = None # IdentificadorContext
            self.maisID = list() # of IdentificadorContexts

        def tipo(self):
            return self.getTypedRuleContext(LAParserParser.TipoContext,0)


        def identificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParserParser.IdentificadorContext)
            else:
                return self.getTypedRuleContext(LAParserParser.IdentificadorContext,i)


        def getRuleIndex(self):
            return LAParserParser.RULE_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariavel" ):
                listener.enterVariavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariavel" ):
                listener.exitVariavel(self)




    def variavel(self):

        localctx = LAParserParser.VariavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variavel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            localctx.primID = self.identificador()
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 176
                self.match(LAParserParser.T__13)
                self.state = 177
                localctx._identificador = self.identificador()
                localctx.maisID.append(localctx._identificador)
                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 183
            self.match(LAParserParser.T__4)
            self.state = 184
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentificadorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.primIDIdent = None # Token
            self._IDENT = None # Token
            self.maisIDIdent = list() # of Tokens

        def dimensao(self):
            return self.getTypedRuleContext(LAParserParser.DimensaoContext,0)


        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(LAParserParser.IDENT)
            else:
                return self.getToken(LAParserParser.IDENT, i)

        def getRuleIndex(self):
            return LAParserParser.RULE_identificador

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentificador" ):
                listener.enterIdentificador(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentificador" ):
                listener.exitIdentificador(self)




    def identificador(self):

        localctx = LAParserParser.IdentificadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_identificador)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            localctx.primIDIdent = self.match(LAParserParser.IDENT)
            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 187
                self.match(LAParserParser.T__14)
                self.state = 188
                localctx._IDENT = self.match(LAParserParser.IDENT)
                localctx.maisIDIdent.append(localctx._IDENT)
                self.state = 193
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 194
            self.dimensao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_aritmetica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParserParser.Exp_aritmeticaContext)
            else:
                return self.getTypedRuleContext(LAParserParser.Exp_aritmeticaContext,i)


        def getRuleIndex(self):
            return LAParserParser.RULE_dimensao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDimensao" ):
                listener.enterDimensao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDimensao" ):
                listener.exitDimensao(self)




    def dimensao(self):

        localctx = LAParserParser.DimensaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_dimensao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 196
                self.match(LAParserParser.T__15)
                self.state = 197
                self.exp_aritmetica()
                self.state = 198
                self.match(LAParserParser.T__16)
                self.state = 204
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def registro(self):
            return self.getTypedRuleContext(LAParserParser.RegistroContext,0)


        def tipo_estendido(self):
            return self.getTypedRuleContext(LAParserParser.Tipo_estendidoContext,0)


        def getRuleIndex(self):
            return LAParserParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = LAParserParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tipo)
        try:
            self.state = 207
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 205
                self.registro()
                pass
            elif token in [18, 19, 20, 21, 22, 62]:
                self.enterOuterAlt(localctx, 2)
                self.state = 206
                self.tipo_estendido()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_basicoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LAParserParser.RULE_tipo_basico

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_basico" ):
                listener.enterTipo_basico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_basico" ):
                listener.exitTipo_basico(self)




    def tipo_basico(self):

        localctx = LAParserParser.Tipo_basicoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tipo_basico)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 209
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3932160) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_basico_identContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_basico(self):
            return self.getTypedRuleContext(LAParserParser.Tipo_basicoContext,0)


        def IDENT(self):
            return self.getToken(LAParserParser.IDENT, 0)

        def getRuleIndex(self):
            return LAParserParser.RULE_tipo_basico_ident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_basico_ident" ):
                listener.enterTipo_basico_ident(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_basico_ident" ):
                listener.exitTipo_basico_ident(self)




    def tipo_basico_ident(self):

        localctx = LAParserParser.Tipo_basico_identContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tipo_basico_ident)
        try:
            self.state = 213
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18, 19, 20, 21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 211
                self.tipo_basico()
                pass
            elif token in [62]:
                self.enterOuterAlt(localctx, 2)
                self.state = 212
                self.match(LAParserParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_estendidoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_basico_ident(self):
            return self.getTypedRuleContext(LAParserParser.Tipo_basico_identContext,0)


        def getRuleIndex(self):
            return LAParserParser.RULE_tipo_estendido

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_estendido" ):
                listener.enterTipo_estendido(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_estendido" ):
                listener.exitTipo_estendido(self)




    def tipo_estendido(self):

        localctx = LAParserParser.Tipo_estendidoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_tipo_estendido)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 216
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 215
                self.match(LAParserParser.T__21)


            self.state = 218
            self.tipo_basico_ident()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Valor_constanteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
